--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /><!--for responsive-->
     <link rel="icon" type="image/svg+xml" href="/zcool-fill.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zinematic</title>
